--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UIApplication">
-        <activity android:name=".LayoutActivity"></activity>
+        <activity android:name=".HandlerActivity"></activity>
+        <activity android:name=".LayoutActivity" />
         <activity android:name=".MeasureActivity" />
-        <activity android:name=".DrawActivity"
-            android:label="draw"/>
+        <activity
+            android:name=".DrawActivity"
+            android:label="draw" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
