--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UIApplication">
-        <activity android:name=".HandlerActivity"></activity>
+        <activity android:name=".TestFragmentActivity"></activity>
+        <activity android:name=".HandlerActivity" />
         <activity android:name=".LayoutActivity" />
         <activity android:name=".MeasureActivity" />
         <activity
