--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     implementation project(':ioc') // 使用注解解释器生成的类 Android library
     implementation project(':ioc-processor')
     annotationProcessor project(':ioc-processor')//注解解释器 java library
+
+    implementation 'com.tencent:mmkv-static:1.2.7'
 }
