--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UIApplication">
-        <activity android:name=".view.layoutmanager.LayoutManagerActivity"></activity>
+        <activity android:name=".view.mmkv.MMKVActivity"></activity>
+        <activity android:name=".view.layoutmanager.LayoutManagerActivity" />
         <activity android:name=".view.annotation.AnnotationActivity" />
         <activity android:name=".view.testfragment.TestFragmentActivity" />
         <activity android:name=".view.handler.HandlerActivity" />
